# django-cloudrun

./: Dockerfile  README.md  firebase.json  manage.py  pyproject.toml
cloudrun_django/: asgi.py  settings.py  urls.py  wsgi.py
