[tool.poetry]
name = "cloudrun-django"
version = "0.1.0"
description = ""
authors = ["Kazuya Takei <myself@attakei.net>"]

[tool.poetry.dependencies]
python = "^3.8 | ^3.7"
django = "^3.0.3"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
